<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="help.home.com.br.homehelp.BoasVindasActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/textView10"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_boa_vindas"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="130dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_boa_vindas_pessoas"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:textStyle="bold"
        android:textSize="15dp"/>

    <LinearLayout  android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_criar_conta"
            android:id="@+id/btnCriarConta"
            android:layout_gravity="center_horizontal"
            android:onClick="criarConta"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ja_sou_cadastrado"
            android:id="@+id/btnJaSouCadastrado"
            android:layout_gravity="center_horizontal"
            android:onClick="jaSouCadastrado"/>

    </LinearLayout>

</LinearLayout>


